[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Graphics/Backgrounds/Belt.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://Scripts/SpawnPath.gd" type="Script" id=5]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1920.99, 0, 0, 0, 0, 0, 1920.99, 1080, 0, 0, 0, 0, 3, 1071, 0, 0, 0, 0, 3, -1, 0, 0, 0, 0, 1920.99, 0 )
}

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 2.667, 2.667 )
texture = ExtResource( 2 )

[node name="SpawnPath" type="Path2D" parent="."]
pause_mode = 1
position = Vector2( -3.00471, 0 )
scale = Vector2( 1.00157, 1 )
curve = SubResource( 1 )
script = ExtResource( 5 )

[node name="Players" type="Node2D" parent="."]
pause_mode = 1

[node name="Enemies" type="Node2D" parent="."]
pause_mode = 1

[node name="Camera" parent="." instance=ExtResource( 1 )]

[node name="Positions" type="Node2D" parent="."]

[node name="PlayerTeleport" type="Position2D" parent="Positions"]
position = Vector2( 760, 590 )

[node name="PlayerMove" type="Position2D" parent="Positions"]
position = Vector2( 945, 338 )

[node name="PlayerAttack" type="Position2D" parent="Positions"]
position = Vector2( 1115, 574 )

[connection signal="timeUp" from="HUD" to="." method="_on_HUD_timeUp"]
